--- a/hw-01.qmd
+++ b/hw-01.qmd
@@ -13,7 +13,6 @@ Setup of Library functions and installing packages needed for homework
 #Accidents dataset is within dsbox package
 
 install.packages("pacman")
-install.packages("openintro")
 pacman::p_load("tidyverse")
 pacman::p_load_gh("rstudio-education/dsbox")
 
@@ -83,11 +82,12 @@ ggplot(data = accidents, aes(x = time, fill = severity)) +
 
 ## 2 - NYC marathon winners
 
-#The New York City Marathon is an annual marathon (26.2 miles / 42.195 kilometers) that courses through the five boroughs of New York City. Marathon times of runners in the Men and Women divisions of the New York City Marathon between 1970 and 2020 can be found in the nyc_marathon dataset in the openintro package
+The New York City Marathon is an annual marathon (26.2 miles / 42.195 kilometers) that courses through the five boroughs of New York City. Marathon times of runners in the Men and Women divisions of the New York City Marathon between 1970 and 2020 can be found in the nyc_marathon dataset in the openintro package
 
-#a. Create a histogram and a box plot of the distribution of marathon times of all runners in the dataset. What features of the distribution are apparent in the histogram and not the box plot? What features are apparent in the box plot but not in the histogram?
+a\. Create a histogram and a box plot of the distribution of marathon times of all runners in the dataset. What features of the distribution are apparent in the histogram and not the box plot? What features are apparent in the box plot but not in the histogram?
 
-```{r NYC,warning = FALSE, message=FALSE}
+```{r all_runners,warning = FALSE, message=FALSE}
+
 library(openintro)
 library(ggplot2)
 
@@ -106,16 +106,83 @@ theme_minimal()
 ggplot(nyc_marathon, aes(x = time)) +
 geom_boxplot() +
   labs(title = "Histogram of NYC Marathon Times", 
-       x = "Time in minutes", 
+       x = "Time (mins)", 
        y = "Number of Runners"
   )+
   theme_minimal()
 
 ```
 
-Observation: The boxplot contains outliers that are positioned farther away from the center of the graph.
+Observation: The boxplot effectively shows the outliers and the median value.
+
+b\. Create a side-by-side box plots of marathon times for men and women. Use different colors for the each of the box plots -- do not use the default colors, but instead manually define them (you can choose any two colors you want). Based on the plots you made, compare the distribution of marathon times for men and women.
+
+```{r men_n_women,warning = FALSE, message=FALSE}
+
+# Create a boxplot with different colors for male and female
+ggplot(data = nyc_marathon, aes(x = time, y = division, color = division)) +
+  geom_boxplot() +
+  scale_fill_manual(values = c("Division A" = "deepskyblue", "Division B" = "orange")) +
+  labs(
+    title = "Marathon Times by Division",
+    x = "Marathon Time (hours)",
+    y = "Division"
+  ) +
+  theme_minimal()
+```
+
+Observation- The finishing time is faster for male than female with median vaues also showing the same.
+
+d\. Visualize the marathon times of men and women over the years. As is usual with time series plot, year should go on the x-axis. Use different colors and shapes to represent the times for men and women. Make sure your colors match those in the previous part. Once you have your plot, describe what is visible in this plot but not in the others.
+
+```{r nyc_time_series,warning = FALSE, message=FALSE}
+
+ggplot(data = nyc_marathon, aes(x = year, y = time, color = division)) +
+  geom_point() +
+  scale_color_manual(values = c("Men" = "deepskyblue2", "Women" = "orange")) +
+  labs(
+    title = "Marathon Times Over the Years",
+    x = "Year",
+    y = "Marathon Time\n(in hours)",
+    color = "Division"
+  ) +
+  theme_minimal()
+```
+
+Observation- The average finishing time for men and women are reducing over the years
 
 ## 3 - US counties
+
+a\. What does the following code do? Does it work? Does it make sense? Why/why not?
+
+```{r question1,warning = FALSE, message=FALSE}
+ggplot(county) +
+  geom_point(aes(x = median_edu, y = median_hh_income)) +
+  geom_boxplot(aes(x = smoking_ban, y = pop2017))
+```
+
+Answer- The above data makes no sense as it does not show distribution of the data for educational qualifications.
+
+b\. Which of the following two plots makes it easier to compare poverty levels (poverty) across people from different median education levels (median_edu)? What does this say about when to place a faceting variable across rows or columns?
+
+```{r question2,warning = FALSE, message=FALSE}
+ggplot(county %>% filter(!is.na(median_edu))) + 
+  geom_point(aes(x = homeownership, y = poverty)) + 
+  facet_grid(median_edu ~ .)
+
+ggplot(county %>% filter(!is.na(median_edu))) + 
+  geom_point(aes(x = homeownership, y = poverty)) + 
+  facet_grid(. ~ median_edu)
+
+```
+
+Answer- The second plot of the data makes more sense as it shows the spread more distinctly (values) across the home ownership vs educational qualifications.
+
+c\. Recreate the R code necessary to generate the following graphs. Note that wherever a categorical variable is used in the plot, it\'s `metro`.
+
+```{r}
+
+```
 
 ## 4 - Rental apartments in SF
 
