--- a/hw-01.qmd
+++ b/hw-01.qmd
@@ -48,7 +48,7 @@ day_type_vector <- c(
 )
 ```
 
-Now that we have created a new vector, we need to identify the type of day, and then process the data to add a new column for 'day_type'.
+Now that we have created a new vector, we need to identify the type of day, and then process the data to add a new column for **'day_type'**.
 
 ```{r processing,warning = FALSE, message=FALSE}
 # Function to identify the day type
@@ -66,10 +66,10 @@ Visualization of the processed data with the required alpha to create a transluc
 
 ```{r plot,warning = FALSE, message=FALSE}
 
-# Create a ggplot visualization
+# Create a ggplot visualization with density of 0.3
 ggplot(data = accidents, aes(x = time, fill = severity)) +
   geom_density(alpha = 0.3) +
-  facet_wrap(~ day_type, ncol = 1) +
+  facet_wrap(~ day_type, ncol = 1) +  #To plot the weekdays and weekends in one plot
   labs(
     x        = "Time of the day",
     y        = "Density",
@@ -91,9 +91,7 @@ a\. Create a histogram and a box plot of the distribution of marathon times of a
 library(openintro)
 library(ggplot2)
 
-glimpse(nyc_marathon)
-
-#Plotting histogram for all runners
+#Plotting histogram for all runners (male and female together)
 ggplot(nyc_marathon, aes(x = time)) +
   geom_histogram() +
   labs(title = "Histogram of NYC Marathon Times for all runners", 
@@ -102,7 +100,7 @@ ggplot(nyc_marathon, aes(x = time)) +
        )+
 theme_minimal()
 
-#Plotting boxplot for all runners
+#Plotting boxplot for all runners (male and female together)
 ggplot(nyc_marathon, aes(x = time)) +
 geom_boxplot() +
   labs(title = "Histogram of NYC Marathon Times", 
@@ -113,7 +111,7 @@ geom_boxplot() +
 
 ```
 
-Observation: The boxplot effectively shows the outliers and the median value.
+**Observation**- The boxplot effectively shows the outliers and the median value.
 
 b\. Create a side-by-side box plots of marathon times for men and women. Use different colors for the each of the box plots -- do not use the default colors, but instead manually define them (you can choose any two colors you want). Based on the plots you made, compare the distribution of marathon times for men and women.
 
@@ -122,7 +120,7 @@ b\. Create a side-by-side box plots of marathon times for men and women. Use dif
 # Create a boxplot with different colors for male and female
 ggplot(data = nyc_marathon, aes(x = time, y = division, color = division)) +
   geom_boxplot() +
-  scale_fill_manual(values = c("Division A" = "deepskyblue", "Division B" = "orange")) +
+  scale_fill_manual(values = c("Division A" = "deepskyblue", "Division B" = "orange")) +                          #Manual color scaling function to custom set colors
   labs(
     title = "Marathon Times by Division",
     x = "Marathon Time (hours)",
@@ -131,15 +129,18 @@ ggplot(data = nyc_marathon, aes(x = time, y = division, color = division)) +
   theme_minimal()
 ```
 
-Observation- The finishing time is faster for male than female with median vaues also showing the same.
+**Observation**- The finishing time is faster for male than female with median vaues also showing the same.
 
 d\. Visualize the marathon times of men and women over the years. As is usual with time series plot, year should go on the x-axis. Use different colors and shapes to represent the times for men and women. Make sure your colors match those in the previous part. Once you have your plot, describe what is visible in this plot but not in the others.
 
 ```{r nyc_time_series,warning = FALSE, message=FALSE}
 
+#Time series plot to show how the running time has changed between men and women
 ggplot(data = nyc_marathon, aes(x = year, y = time, color = division)) +
   geom_point() +
-  scale_color_manual(values = c("Men" = "deepskyblue2", "Women" = "orange")) +
+  #Manual scaling of colors
+  scale_color_manual(values = c("Men" = "deepskyblue2", "Women" = "orange")) +  
+  #Labling of figure
   labs(
     title = "Marathon Times Over the Years",
     x = "Year",
@@ -149,45 +150,50 @@ ggplot(data = nyc_marathon, aes(x = year, y = time, color = division)) +
   theme_minimal()
 ```
 
-Observation- The average finishing time for men and women are reducing over the years
+**Observation-** The average finishing time for men and women are reducing over the years
 
 ## 3 - US counties
 
 a\. What does the following code do? Does it work? Does it make sense? Why/why not?
 
 ```{r question1,warning = FALSE, message=FALSE}
+#Plot is an example of how a dotplot will not be helpful in representation
 ggplot(county) +
   geom_point(aes(x = median_edu, y = median_hh_income)) +
   geom_boxplot(aes(x = smoking_ban, y = pop2017))
 ```
 
-Answer- The above data makes no sense as it does not show distribution of the data for educational qualifications.
+**Answer-** The above data makes no sense as it does not show distribution of the data for educational qualifications.
 
 b\. Which of the following two plots makes it easier to compare poverty levels (poverty) across people from different median education levels (median_edu)? What does this say about when to place a faceting variable across rows or columns?
 
 ```{r question2,warning = FALSE, message=FALSE}
+#Plot 1 showing the spread of data is across the X axis
 ggplot(county %>% filter(!is.na(median_edu))) + 
   geom_point(aes(x = homeownership, y = poverty)) + 
   facet_grid(median_edu ~ .)
 
+#Plot 1 showing the spread of data is across the Y axis
 ggplot(county %>% filter(!is.na(median_edu))) + 
   geom_point(aes(x = homeownership, y = poverty)) + 
   facet_grid(. ~ median_edu)
 
 ```
 
-Answer- The first plot of the data makes more sense as it shows the spread more distinctly (values) across the home ownership vs educational qualifications.
+**Answer-** The first plot of the data makes more sense as it shows the spread more distinctly (values) across the home ownership vs educational qualifications.
 
 c\. Recreate the R code necessary to generate the following graphs. Note that wherever a categorical variable is used in the plot, it\'s `metro`.
 
 ```{r plots_A_B, warning = FALSE, message=FALSE}
 
+# Scatter plot shows the full data set
 ggplot(data = county, aes(x = homeownership, y = poverty)) +
   geom_point() +
   labs(title = "Plot A",
        x = "homeownership",
        y = "poverty")
 
+# Scatter plot shows the full data set and geom_smooth plot layered over
 ggplot(data = county, aes(x = homeownership, y = poverty)) +
   geom_point() +
   geom_smooth(se = FALSE)+
@@ -199,42 +205,65 @@ ggplot(data = county, aes(x = homeownership, y = poverty)) +
 
 ```{r plots_C_D, warning = FALSE, message=FALSE}
 
-# Plot 1: Scatter plot with smoothing line (color set to green)
+# Scatter plot with smoothing line for metro categorical variable (color set to green) layered over the scatter plot
 ggplot(data = county, aes(x = homeownership, y = poverty, group = metro)) +
   geom_point() +  
   geom_smooth(se = FALSE, aes(color = "green")) +  # Set color as a constant ("green")
   labs(
-    x = "Homeownership",
-    y = "Poverty",
-    title = "Scatter Plot with Smoothing Line for Metro"
+    x = "homeownership",
+    y = "poverty",
+    title = "Plot C"
   )
 
-# Plot 2: Scatter plot (Plot B)
+# Scatter plot with smoothing line for metro categorical variable (color set to green) layered under the scatter plot
 ggplot(data = county, aes(x = homeownership, y = poverty, group = metro)) +
   geom_smooth(se = FALSE) + 
   geom_point() +  # Add points on top of the smoothed line
   labs(
-    x = "Homeownership",
-    y = "Poverty",
-    title = "Scatter Plot with Smoothing Line for Metro"
+    x = "homeownership",
+    y = "poverty",
+    title = "Plot D"
   )
 ```
 
 ```{r plots_E_F, warning = FALSE, message=FALSE}
 
+#Scatter plot shows the segregation of data points based on metro variable, and smoothing line set to different linetypes, with legends
 ggplot(data = county, aes(x = homeownership, y = poverty, group = metro)) +
   geom_point(aes(color = metro)) +
   geom_smooth(aes(linetype = metro),se = FALSE) + 
   labs(
-    x = "Homeownership",
-    y = "Poverty",
-    title = "Scatter Plot with Smoothing Line for Metro"
+    x = "homeownership",
+    y = "poverty",
+    title = "Plot E"
   ) +
   scale_linetype_manual(values = c("yes" = 21, "no" = "solid")) 
 
-
+#Scatter plot shows the segregation of data points based on metro variable, and smoothing line matching the color of data set, layered under the data set, with legends
 ggplot(data = county, aes(x = homeownership, y = poverty, group = metro)) +
   geom_smooth(aes(color = metro),se = FALSE) +
+  geom_point(aes(color = metro)) +
+  labs(
+    x = "homeownership",
+    y = "poverty",
+    title = "Plot F"
+  )
+```
+
+```{r plots_G_H, warning = FALSE, message=FALSE}
+
+#Scatter plot shows the segregation of data points based on metro variable, and smoothing line set for the whole data without segregation
+ggplot(data = county, aes(x = homeownership, y = poverty)) +
+  geom_point(aes(color = metro)) +
+  geom_smooth(se = FALSE)+
+  labs(
+    x = "Homeownership",
+    y = "Poverty",
+    title = "Scatter Plot with Smoothing Line for Metro"
+  )
+
+#Scatter plot shows the segregation of data points based on metro variable only
+ggplot(data = county, aes(x = homeownership, y = poverty)) +
   geom_point(aes(color = metro)) +
   labs(
     x = "Homeownership",
@@ -244,5 +273,51 @@ ggplot(data = county, aes(x = homeownership, y = poverty, group = metro)) +
 ```
 
 ## 4 - Rental apartments in SF
+
+The data for this exercise comes from TidyTuesday and it's on rental prices in San Francisco. You can find out more about the dataset by inspecting its documentation [here](https://github.com/rfordatascience/tidytuesday/tree/master/data/2022/2022-07-05). The dataset you'll be using is called `rent`. Create a visualization that will help you compare the distribution of rental prices (`price`) per bedroom (`beds`) across neighborhoods (`nhood`) in the city of San Francisco (`city == "san francisco"`), over time. Limit your analysis to rentals where the full unit is available, i.e. (`room_in_apt	== 0`). You have the flexibility to choose which years and which neighborhoods. Note that you should have a maximum of 8 neighborhoods on your visualization, but one or more of them can be a combination of many (e.g., an "other" category). Your visualization should also display some measure of the variability in your data. You get to decide what type of visualization to create and there is more than one correct answer! In your answer, include a brief description of why you made the choices you made as well as an interpretation of the findings of how rental prices vary over time and neighborhoods in San Francisco.
+
+This code snippet retrieves rental data from a GitHub repository using R's "read.csv()" function. The dataset, part of the TidyTuesday project, will be the foundation for data analysis and visualization task, enabling insights into rental prices and patterns for the city of San Francisco.
+
+```{r warning = FALSE, message=FALSE}
+
+# Read the data from the URL in Github
+rent <- read.csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2022/2022-07-05/rent.csv")
+```
+
+```{r warning = FALSE, message=FALSE}
+# Create a new column for price per bedroom (Using mutate function)
+mutate_data <- rent %>%
+  mutate(price_per_bedroom = price / beds)  # Assigning value of new column to a division of price/beds
+
+# Selecting 6 neighborhoods
+neighborhoods <- c("bayview", "parkside", "CCSF", "russian hill", "sea cliff", "twin peaks")
+filtered_data <- mutate_data %>%
+  filter(nhood %in% neighborhoods)  # Filter based on the selected neighborhoods
+
+# Filter the data for years 2010-2018
+filtered_data <- filtered_data %>%
+  filter(city == "san francisco", room_in_apt == 0, year >= 2010, year <= 2018)
+
+```
+
+Now, we have the required filtered data. We can proceed with plotting the graph. I am choosing a heatmap plot to show the data, as the goal is to display the varying of rent per bedroom as time passes, and the heatmap can accomplish this goal by showing color gradients for each neighborhood.
+
+```{r warning = FALSE, message=FALSE}
+
+#Heatmap for prices for 6 different neighborhoods from year 2010-2018
+ggplot(data = filtered_data, aes(x = year, y = nhood, fill = price_per_bedroom)) +
+  geom_tile() +
+  labs(
+    x = "Year",
+    y = "Neighborhood",
+    fill = "Price per Bedroom",
+    title = "Heatmap of Price per Bedroom Trends (2010-2018)"
+  ) +
+  theme_minimal() +
+  scale_fill_gradient(low = "white", high = "blue")  # Adjust the color scale
+
+```
+
+**Observation**- For the above data, the general trend is upwards, i.e. price is increasing as time passes. For some neighborhoods there is a steep increase, and then correction, but overall trend is upwards (positive).
 
 ## 5 - Napoleon's march.
